--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,6 +1,30 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
+    <div class="form-create">
+    <h1>Создать запись в расписании курьера.</h1>
+    <div class="info"></div>
+    <form id="filter" method="POST" action="/">
+        <div class="form-group">
+            <div class="input-group date" id="datetimepicker2" data-target-input="nearest">
+                <input type="text" name="date_from" class="form-control datetimepicker-input" data-target="#datetimepicker2"/>
+                <div class="input-group-append" data-target="#datetimepicker2" data-toggle="datetimepicker">
+                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="input-group date" id="datetimepicker3" data-target-input="nearest">
+                <input type="text" name="date_to" class="form-control datetimepicker-input" data-target="#datetimepicker3"/>
+                <div class="input-group-append" data-target="#datetimepicker3" data-toggle="datetimepicker">
+                    <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                </div>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    </div>
+
     <table class="table">
         <thead>
         <tr>
@@ -13,7 +37,7 @@
             <th scope="col">Регион</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody id="schedules">
         {% for key, schedule in schedules %}
             <tr>
                 <th scope="row">{{ schedule.id }}</th>
@@ -27,4 +51,15 @@
         {% endfor %}
         </tbody>
     </table>
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css" />
 {% endblock %}
